buildscript {
    dependencies {
        classpath 'de.sebastianboegl.gradle.plugins:shadow-log4j-transformer:2.1.1'
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'application'
    id 'com.github.ben-manes.versions' version '0.17.0'
}

group 'com.khronodragon'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.9
archivesBaseName = 'bluestone'
mainClassName = 'com.khronodragon.bluestone.Start'
/*applicationDefaultJvmArgs = [
        '-Xms1000M',
        '-Xmx2057431K -XX:MaxDirectMemorySize=10M -XX:MaxMetaspaceSize=92968K -XX:ReservedCodeCacheSize=240M -Xss1M -XX:+UseG1GC -server -XX:+CMSClassUnloadingEnabled -XX:+AggressiveOpts -XX:MaxInlineSize=64 -Djava.lang.invoke.stringConcat=MH_INLINE_SIZED_EXACT -XX:MaxGCPauseMillis=2500 -Xverify:none -cp build/classes/java/main:build/libs/bluestone-1.0-SNAPSHOT.jar:build/libs/bluestone-1.0-SNAPSHOT-all.jar -Dcom.sun.management.jmxremote  -Dcom.sun.management.jmxremote.authenticate=true -Dcom.sun.management.jmxremote.ssl=true  -Dcom.sun.management.jmxremote.ssl.need.client.auth=true -Dcom.sun.management.jmxremote.port=49981 -Dcom.sun.management.jmxremote.rmi.port=49982 -Djava.rmi.server.hostname=162.248.90.184 -Djavax.net.ssl.keyStore=/home/botuser/.keystore -Djavax.net.ssl.keyStoreType=JKS -Djavax.net.ssl.keyStorePassword=WApoticHair4 -Djavax.net.ssl.trustStore=/home/botuser/truststore.dat -Djavax.net.ssl.trustStoreType=JKS -Djavax.net.ssl.trustStorePassword=changeit -Dcom.sun.management.jmxremote.password.file=/home/botuser/jmx-auth.password com.khronodragon.bluestone.Start'
]*/

apply plugin: 'com.github.johnrengelman.shadow' // work around bug
import de.sebastianboegl.gradle.plugins.shadow.transformers.Log4j2PluginsFileTransformer

repositories {
    mavenCentral()
    jcenter()
    maven {
        name 'jitpack'
        url 'https://jitpack.io'
    }
}

shadowJar {
    transform(Log4j2PluginsFileTransformer)
    mergeServiceFiles()
    zip64 true
}

dependencies {
    compile 'net.dv8tion:JDA:3.5.1_342'
    compile 'com.sedmelluq:lavaplayer:1.2.56'
    compile 'com.squareup.okhttp3:okhttp:3.10.0'
    compile 'com.google.guava:guava:24.0-jre'
    compile 'org.json:json:20180130'
    compile 'org.reflections:reflections:0.9.11'
    compile 'org.codehaus.groovy:groovy-jsr223:3.0.0-alpha-1'
    compile 'org.apache.commons:commons-lang3:3.7'
    compile 'org.apache.commons:commons-text:1.2'
    compile 'org.apache.logging.log4j:log4j-api:2.10.0'
    compile 'org.apache.logging.log4j:log4j-core:2.10.0'
    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.10.0'
    compile 'com.j2html:j2html:1.2.2'
    compile 'com.j256.ormlite:ormlite-core:5.1' // --
    compile 'com.j256.ormlite:ormlite-jdbc:5.1'
    compile 'com.h2database:h2:1.4.196'
    compile 'com.sedmelluq:jda-nas:1.0.6'
    compile 'com.zaxxer:HikariCP:2.7.8'
    compile 'com.google.code.gson:gson:2.8.2'
    compile 'mysql:mysql-connector-java:8.0.9-rc'
    compile 'net.sf.trove4j:trove4j:3.0.3'
    compile 'com.jagrosh:jda-utilities-menu:2.1'
    compile 'com.jagrosh:jda-utilities-commons:2.1'
    compile 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
    compile 'com.joestelmach:natty:0.13'
    compile 'com.twelvemonkeys.imageio:imageio-core:3.3.2'
    compile 'com.google.re2j:re2j:1.1'
    compile 'org.luaj:luaj-jse:3.0.1'
    compile 'io.sentry:sentry-log4j2:1.7.0'
}

compileJava.options.encoding = 'UTF-8'